# slog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: slog.h
src/: slog.cpp
test/: CMakeLists.txt  README.md  conanfile.txt  spdlog_test.cpp  wrapping_test.cpp
wrapping/include/: slog.h
wrapping/src/: slog.cpp
